# BeamFit

./: README.md  environment.yaml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
beamfit/: __init__.py  base.py  debug.py  exceptions.py  factory.py  filters.py  gaussian_fit_1d.py  gaussian_linear_least_squares.py  image.py  plotting_and_output.py  pydantic.py  rms_integration.py  supergaussian.py  utils.py
beamfit/methods/: debug.py  gaussian_fit_1d.py  gaussian_linear_least_squares.py  rms_integration.py  supergaussian.py
beamfit/methods/supergaussian/: __init__.py  c_drivers.py  sigma_transformations.py  supergaussian.py
src/: gaussian.c
src/beamfit/: __init__.py  base.py  factory.py  fit_param_conversion.py  image.py  utils.py
src/beamfit/methods/: debug.py  gaussian_fit_1d.py  gaussian_linear_least_squares.py
tests/: test_fitting.py  test_image.py  test_preprocessing.py  test_supergaussian_benchmark.py  test_supergaussian_python.py
