[project]
name = "beamfit"
version = "1.14"
description = "Robust laser and charged particle beam image analysis"
authors = [
    {name = "Christopher M. Pierce", email = "contact@chris-pierce.com"}
]
license = {text = "BSD 3-Clause License"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pydantic",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark"
]

[project.urls]
Homepage = "https://github.com/electronsandstuff/Beamfit"
Repository = "https://github.com/electronsandstuff/Beamfit"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Will find packages automatically
